--- a/app/src/main/res/layout/top_item.xml
+++ b/app/src/main/res/layout/top_item.xml
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_launcher_foreground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/item_title"
             app:layout_constraintEnd_toEndOf="parent"/>
